fix jumping issue bottom of page

--- a/css/modules/_images.scss
+++ b/css/modules/_images.scss
@@ -95,7 +95,7 @@ $control-menu-height: 5vw;
 }
 
 .header-parent {
-  margin-top: $control-menu-height; // fallback for no js
+  //margin-top: $control-menu-height; // fallback for no js
 }
 
 .header-bar {
